--- a/Sushi.css
+++ b/Sushi.css
@@ -1,5 +1,5 @@
  .u-section-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url("images/202312272338131.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.25), rgba(0,0,0,0.25)), url('images/202312272338132.jpg');
   background-position: 50% 100%;
 }
 
@@ -251,7 +251,7 @@
 }
 
 .u-section-3 .u-image-1 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/202312272336271.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/202312272336272.jpg");
   background-position: 50% 50%;
 }
 
@@ -260,7 +260,7 @@
 }
 
 .u-section-3 .u-image-2 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003053.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003054.jpg");
   background-position: 50% 50%;
 }
 
@@ -269,7 +269,7 @@
 }
 
 .u-section-3 .u-image-3 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003039.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003040.jpg");
   background-position: 50% 50%;
 }
 
@@ -278,7 +278,7 @@
 }
 
 .u-section-3 .u-image-4 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003201.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003202.jpg");
   background-position: 50% 50%;
 }
 
@@ -287,7 +287,7 @@
 }
 
 .u-section-3 .u-image-5 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003136.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003137.jpg");
   background-position: 50% 50%;
 }
 
@@ -296,7 +296,7 @@
 }
 
 .u-section-3 .u-image-6 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003209.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003210.jpg");
   background-position: 50% 50%;
 }
 
@@ -305,7 +305,7 @@
 }
 
 .u-section-3 .u-image-7 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003155.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003156.jpg");
   background-position: 50% 50%;
 }
 
@@ -323,7 +323,7 @@
 }
 
 .u-section-3 .u-image-9 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003120.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003121.jpg");
   background-position: 50% 50%;
 }
 
@@ -332,7 +332,7 @@
 }
 
 .u-section-3 .u-image-10 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003031.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003032.jpg");
   background-position: 50% 50%;
 }
 
@@ -341,7 +341,7 @@
 }
 
 .u-section-3 .u-image-11 {
-  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003224.jpg");
+  background-image: linear-gradient(0deg, rgba(0,0,0,0.15), rgba(0,0,0,0.15)), url("images/20231228003225.jpg");
   background-position: 50% 50%;
 }
 
@@ -363,7 +363,7 @@
   height: 40px;
   left: auto;
   top: 156px;
-  right: 0;
+  right: -1px;
 }
 
 @media (max-width: 1199px) {
