--- a/Hotpot.css
+++ b/Hotpot.css
@@ -499,10 +499,10 @@
 
 .u-section-4 .u-form-1 {
   height: 457px;
-  --thumb-color: #4756c9;
-  --thumb-hover-color: #7782d9;
+  --thumb-color: #478ac9;
+  --thumb-hover-color: #77aad9;
   --track-color: #c0c0c0;
-  --track-active-color: #4756c9;
+  --track-active-color: #478ac9;
   width: 886px;
   margin: 32px auto 60px;
 }
