--- a/index.css
+++ b/index.css
@@ -17,11 +17,7 @@
 .u-section-1 .u-text-2 {
   text-transform: uppercase;
   font-size: 3rem;
-  margin: 20px auto 0;
-}
-
-.u-section-1 .u-text-3 {
-  margin: 58px auto 60px;
+  margin: 20px auto 60px;
 }
 
 @media (max-width: 1199px) {
@@ -254,7 +250,7 @@
   grid-template-columns: repeat(2, calc(50% - 10px));
   min-height: 429px;
   grid-auto-columns: calc(50% - 10px);
-  grid-gap: 20px;
+  --gap: 20px;
 }
 
 .u-section-3 .u-image-1 {
@@ -298,7 +294,8 @@
 @media (max-width: 1199px) {
   .u-section-3 .u-repeater-1 {
     grid-template-columns: calc(50% - 10px) calc(50% - 10px);
-    min-height: 352px;
+    grid-gap: 20px;
+    min-height: 354px;
   }
 }
 
@@ -363,10 +360,10 @@
 }
 
 .u-section-4 .u-repeater-1 {
-  grid-template-columns: calc(33.3333% - 13.3333px) calc(33.3333% - 13.3333px) calc(33.3333% - 13.3333px);
+  grid-template-columns: repeat(3, calc(33.3333% - 13.3333px));
   min-height: 352px;
-  grid-gap: 20px 20px;
   grid-auto-columns: calc(33.3333% - 13.3333px);
+  --gap: 20px;
 }
 
 .u-section-4 .u-image-1 {
@@ -488,6 +485,7 @@
 @media (max-width: 1199px) {
   .u-section-4 .u-repeater-1 {
     grid-template-columns: repeat(3, calc(33.333333333333336% - 13.3333px));
+    grid-gap: 20px 20px;
     grid-auto-columns: calc(33.333333333333336% - 13.3333px);
   }
 }
