--- a/Sushi.css
+++ b/Sushi.css
@@ -77,12 +77,11 @@
 }
 
 .u-section-2 .u-sheet-1 {
-  min-height: 1322px;
+  min-height: 1071px;
 }
 
 .u-section-2 .u-layout-wrap-1 {
-  margin-top: 185px;
-  margin-bottom: 60px;
+  margin: 54px 0 60px;
 }
 
 .u-section-2 .u-layout-cell-1 {
@@ -141,6 +140,11 @@
 @media (max-width: 1199px) {
   .u-section-2 .u-sheet-1 {
     min-height: 1182px;
+  }
+
+  .u-section-2 .u-layout-wrap-1 {
+    margin-right: initial;
+    margin-left: initial;
   }
 
   .u-section-2 .u-layout-cell-1 {
